# gpsspoof

./: .gitignore  CLAUDE.md  LICENSE  README.md  iphone_spoof.py  pyproject.toml
scripts/: install-tunneld.sh  uninstall-tunneld.sh
